# GraphingLibStyleEditor

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  documentation.md  feature_request.md
docs/: compatibility.rst  conf.py  handbook.rst  index.rst  quickstart.rst  requirements.txt
docs/_static/: graphinglib.css  switcher.json
docs/release_notes/: index.rst  v1.0.0.rst  v1.0.1.rst
gl-style-editor/: custom.css  figure_tab.py  fits_tab.py  glse.py  main.py  other_gl_tab.py  plotting_1d_tab.py  plotting_2d_tab.py  shapes_tab.py  widgets.py
gl-style-editor/figures/: curve.py  histogram.py  scatter.py  vectorfield.py
glse/: __init__.py  cli.py  figure_tab.py  fits_tab.py  glse.py  other_gl_tab.py  plotting_1d_tab.py  plotting_2d_tab.py  shapes_tab.py  widgets.py
glse/figures/: arrow.py  contour.py  curve.py  figure.py  fits.py  heatmap.py  histogram.py  hlines and vlines.py  line.py  point.py  polygon.py  scatter.py  stream.py  table.py  text.py
