[tool.poetry]
name = "glse"
version = "0.0.1"
description = "A GUI editor for GraphingLib style files"
license = "MIT"
authors = [
    "Gustave Coulombe <magikgus@gmail.com>",
    "Yannick Lapointe <yannicklapointe77@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
setuptools-scm = "^8.0.4"
qt-material = "^2.14"
graphinglib = { git = "https://github.com/GraphingLib/GraphingLib.git" }
pyside6 = "^6.7.1"

[tool.poetry.scripts]
glse = "glse.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
